src/test/deca/syntax/invalid/synt/float_round_to_0.deca
/*
    Description : Nombre flottant trop petit

    Résultat : Erreur syntaxique
*/
{
    float f = 1.0E-50;
}
